crates/test-files/fixtures/compile_errors/call_event_with_wrong_types.fe
use std::context::Context

contract Foo {
    event MyEvent {
        val_1: String<5>
        idx val_2: u8
    }

    pub fn foo(ctx: Context) {
        emit MyEvent(ctx, val_1: "foo bar", val_2: 1000)
    }
}
